# tgirl

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  ESTRADIOL.md  Qwen3.5-0.8B-MLX-4bit.estradiol  README.md  ROADMAP.md  TGIRL.md  push-hands.md  pyproject.toml  qwen3.5-0.8b.estradiol  session_probe.npy
.claude/: settings.json
benchmarks/: analyze_telemetry.py  run_bfcl.py
docs/: BACKLOG.md  ESTRADIOL-v2.md
examples/: e2e_demo.py  e2e_instructed.py  e2e_json_tools.py  showcase_unified_api.py  sweep_json_tools.py  test_instructions.py  test_rerank.py  test_typed_grammar.py
prompts/: README.md
scripts/: check-prompt-sync.sh  claude-teammate-wrapper.sh  close-feature.sh  new-feature.sh  setup.sh  smoke_probe_persistence.py  sweep_alpha_cliff.py  sync-to-project.sh  test_autotune_live.py  worktree-setup.sh
tests/: conftest.py  test_autotune.py  test_band.py  test_bfcl.py  test_bridge.py  test_cache.py  test_calibrate.py  test_certainty.py  test_cli.py  test_coherence.py  test_compile.py  test_compile_capability.py  test_estradiol.py  test_estradiol_integration.py  test_format.py  test_grammar.py  test_instructions.py  test_integration_compile.py  test_integration_grammar.py  test_integration_registry.py  test_integration_sample.py  test_integration_transport.py  test_lingo_grammar_state.py  test_lingo_lexicon.py  test_lingo_types.py  test_modulation.py  test_outlines_adapter.py  test_plugins_capabilities.py  test_plugins_collision.py  test_plugins_config.py  test_plugins_input_validation.py  test_plugins_loader.py  test_plugins_security.py  test_registry.py  (+13 more)
(+207 files in other folders)
